# xiaozhi-esp32

main/: CMakeLists.txt  Kconfig.projbuild  application.cc  idf_component.yml  main.cc  ota.cc
main/boards/bread-compact-wifi-lcd/: compact_wifi_board_lcd.cc  config.h
main/boards/common/: wifi_board.cc
main/boards/xmini-c3/: config.h  xmini_c3_board.cc
main/protocols/: websocket_protocol.cc  websocket_protocol.h
main/wifi/: smartconfig.cc  smartconfig.h  wifi_station.cc
